test/parallel/forall/may-vs-must-par/expr-mustpar-loop-err-iter1ser.good
expr-mustpar-loop-err-iter1ser.chpl:8: error: A standalone or leader iterator is not found for the iterable expression in this forall loop
